[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-tests"
version = "0.1.0"
description = "Playwright test suite"
dependencies = [
 "playwright",
 "pytest",
 "pytest-playwright",
 "pytest-base-url",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pages*"]
exclude = ["Tests*"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
pythonpath = [".", "Tests"]  # Root (car.py) + Tests/
addopts = "-v -s