[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-projects"  # Changed from "playwright-tests" (no browser)
version = "0.1.0"
description = "Python test suite"
dependencies = [
  "pytest",
  "pytest-base-url"
]

[tool.pytest.ini_options]
testpaths = ["Tests"]
pythonpath = ["."]
addopts = "-v -s"